# a-song-of-ice-and-fire-generated-books

./: .gitignore  README.md  justfile  pyproject.toml
book_writer/: improve.py  ingest.py  outline.py  review.py  summarize.py  write.py
